// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/statistic/demo/basic.md correctly 1`] = `
<div
  class="ant-row"
  style="margin-left:-8px;margin-right:-8px"
>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Active Users
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            112,893
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Account Balance (CNY)
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            112,893
          </span>
          <span
            class="ant-statistic-content-value-decimal"
          >
            .00
          </span>
        </span>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-primary"
      style="margin-top:16px"
      type="button"
    >
      <span>
        Recharge
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/statistic/demo/card.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="ant-row"
    style="margin-left:-8px;margin-right:-8px"
  >
    <div
      class="ant-col-12"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="ant-statistic"
          >
            <div
              class="ant-statistic-title"
            >
              Active
            </div>
            <div
              class="ant-statistic-content"
              style="color:#3f8600"
            >
              <span
                class="ant-statistic-content-prefix"
              >
                <i
                  aria-label="icon: arrow-up"
                  class="anticon anticon-arrow-up"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#arrow-up"
                    />
                  </svg>
                </i>
              </span>
              <span
                class="ant-statistic-content-value"
              >
                <span
                  class="ant-statistic-content-value-int"
                >
                  11
                </span>
                <span
                  class="ant-statistic-content-value-decimal"
                >
                  .28
                </span>
              </span>
              <span
                class="ant-statistic-content-suffix"
              >
                %
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-12"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="ant-statistic"
          >
            <div
              class="ant-statistic-title"
            >
              Idle
            </div>
            <div
              class="ant-statistic-content"
              style="color:#cf1322"
            >
              <span
                class="ant-statistic-content-prefix"
              >
                <i
                  aria-label="icon: arrow-down"
                  class="anticon anticon-arrow-down"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#arrow-down"
                    />
                  </svg>
                </i>
              </span>
              <span
                class="ant-statistic-content-value"
              >
                <span
                  class="ant-statistic-content-value-int"
                >
                  9
                </span>
                <span
                  class="ant-statistic-content-value-decimal"
                >
                  .30
                </span>
              </span>
              <span
                class="ant-statistic-content-suffix"
              >
                %
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/statistic/demo/countdown.md correctly 1`] = `
<div
  class="ant-row"
  style="margin-left:-8px;margin-right:-8px"
>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Countdown
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          48:00:30
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Million Seconds
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          48:00:30:000
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-24"
    style="padding-left:8px;padding-right:8px;margin-top:32px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Day Level
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          2 天 0 时 0 分 30 秒
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/statistic/demo/unit.md correctly 1`] = `
<div
  class="ant-row"
  style="margin-left:-8px;margin-right:-8px"
>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Feedback
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-prefix"
        >
          <i
            aria-label="icon: like"
            class="anticon anticon-like"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#like"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            1,128
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Unmerged
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            93
          </span>
        </span>
        <span
          class="ant-statistic-content-suffix"
        >
          / 100
        </span>
      </div>
    </div>
  </div>
</div>
`;
